[package]
name = "minimal-ed448-mirror"
version = "0.4.0"
description = "Unaudited, inefficient implementation of Ed448 in Rust.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/ed448"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ed448", "ff", "group"]
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
rustversion = "1"

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

generic-array = { version = "1", default-features = false }
crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["std"] }

rand_core = { version = "0.6", default-features = false, features = ["std"] }

ff-group-tests = { package = "ff-group-tests-mirror", path = "../ff-group-tests", version = "0.13.0" }

[features]
std = ["rand_core/std", "zeroize/std", "subtle/std", "ff/std"]
default = ["std"]
