[package]
name = "schnorr-signatures-mirror"
version = "0.5.1"
description = "Minimal Schnorr signatures crate hosting common code.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/schnorr"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["schnorr", "ff", "group"]
edition = "2021"
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { package = "std-shims-mirror", path = "../../common/std-shims", version = "^0.1.1", default-features = false }

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

transcript = { package = "flexible-transcript-mirror", path = "../transcript", version = "^0.3.2", default-features = false }

ciphersuite = { package = "ciphersuite-mirror", path = "../ciphersuite", version = "^0.4.1", default-features = false, features = ["alloc"] }
multiexp = { package = "multiexp-mirror", path = "../multiexp", version = "0.4", default-features = false, features = ["batch"] }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

sha2 = "0.10"

dalek-ff-group = { package = "dalek-ff-group-mirror", path =  "../dalek-ff-group" }
ciphersuite = { package = "ciphersuite-mirror", path = "../ciphersuite", features = ["ed25519"] }

[features]
std = ["std-shims/std", "rand_core/std", "zeroize/std", "transcript/std", "ciphersuite/std", "multiexp/std"]
default = ["std"]
