[package]
name = "monero-generators-mirror"
version = "0.4.0"
description = "Monero's hash to point function and generators.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/networks/monero/generators"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { package = "std-shims-mirror", path = "../../../common/std-shims", version = "^0.1.1", default-features = false }

subtle = { version = "^2.4", default-features = false }

sha3 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

group = { version = "0.13", default-features = false }
dalek-ff-group = { package = "dalek-ff-group-mirror", path = "../../../crypto/dalek-ff-group", version = "0.4", default-features = false }

monero-io = { package = "monero-io-mirror", path = "../io", version = "0.1", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
std = [
  "std-shims/std",

  "subtle/std",

  "sha3/std",

  "group/alloc",
  "dalek-ff-group/std",

  "monero-io/std"
]
default = ["std"]
