[package]
name = "monero-clsag-mirror"
version = "0.1.0"
description = "The CLSAG linkable ring signature, as defined by the Monero protocol.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/networks/monero/ringct/clsag"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { package = "std-shims-mirror", path = "../../../../common/std-shims", version = "^0.1.1", default-features = false }

thiserror = { version = "1", default-features = false, optional = true }

rand_core = { version = "0.6", default-features = false }
zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

# Cryptographic dependencies
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

# Multisig dependencies
rand_chacha = { version = "0.3", default-features = false, optional = true }
transcript = { path = "../../../../crypto/transcript", package = "flexible-transcript-mirror", version = "0.3", default-features = false, features = ["recommended"], optional = true }
group = { version = "0.13", default-features = false, optional = true }
dalek-ff-group = { path = "../../../../crypto/dalek-ff-group", package = "dalek-ff-group-mirror", version = "0.4", default-features = false, optional = true }
frost = { path = "../../../../crypto/frost", package = "modular-frost-mirror", version = "0.8.1", default-features = false, features = ["ed25519"], optional = true }

# Other Monero dependencies
monero-io = { path = "../../io", package = "monero-io-mirror", version = "0.1", default-features = false }
monero-generators = { path = "../../generators", package = "monero-generators-mirror", version = "0.4", default-features = false }
monero-primitives = { path = "../../primitives", package = "monero-primitives-mirror", version = "0.1", default-features = false }

[dev-dependencies]
frost = { path = "../../../../crypto/frost", package = "modular-frost-mirror", version = "0.8.1", default-features = false, features = ["ed25519", "tests"] }

[features]
std = [
  "std-shims/std",

  "thiserror",

  "rand_core/std",
  "zeroize/std",
  "subtle/std",

  "rand_chacha?/std",
  "transcript?/std",
  "group?/alloc",
  "dalek-ff-group?/std",

  "monero-io/std",
  "monero-generators/std",
  "monero-primitives/std",
]
multisig = ["rand_chacha", "transcript", "group", "dalek-ff-group", "frost", "std"]
default = ["std"]
