[package]
name = "monero-mlsag-mirror"
version = "0.1.0"
description = "The MLSAG linkable ring signature, as defined by the Monero protocol.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/networks/monero/ringct/mlsag"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { path = "../../../../common/std-shims", package = "std-shims-mirror", version = "^0.1.1", default-features = false }

thiserror = { version = "1", default-features = false, optional = true }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

# Cryptographic dependencies
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

# Other Monero dependencies
monero-io = { path = "../../io", package = "monero-io-mirror", version = "0.1", default-features = false }
monero-generators = { path = "../../generators", package = "monero-generators-mirror", version = "0.4", default-features = false }
monero-primitives = { path = "../../primitives", package = "monero-primitives-mirror", version = "0.1", default-features = false }

[features]
std = [
  "std-shims/std",

  "thiserror",

  "zeroize/std",

  "monero-io/std",
  "monero-generators/std",
  "monero-primitives/std",
]
default = ["std"]
